moonlight-control/test/fixtures/CompileFail/ProgramConstructor.hs
module ProgramConstructor where

import Moonlight.Control.Program
  ( Program,
  )

bad :: Program () Int
bad =
  Seq Skip Skip
